; ModuleID = '/home/carl/AnghaBench/linux/net/bluetooth/extr_sco.c_sco_chan_add.c'
source_filename = "/home/carl/AnghaBench/linux/net/bluetooth/extr_sco.c_sco_chan_add.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sco_conn = type { i64 }
%struct.sock = type { i32 }

@EBUSY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.sco_conn*, %struct.sock*, %struct.sock*)* @sco_chan_add to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @sco_chan_add(%struct.sco_conn* %0, %struct.sock* %1, %struct.sock* %2) #0 {
  %4 = alloca %struct.sco_conn*, align 8
  %5 = alloca %struct.sock*, align 8
  %6 = alloca %struct.sock*, align 8
  %7 = alloca i32, align 4
  store %struct.sco_conn* %0, %struct.sco_conn** %4, align 8
  store %struct.sock* %1, %struct.sock** %5, align 8
  store %struct.sock* %2, %struct.sock** %6, align 8
  store i32 0, i32* %7, align 4
  %8 = load %struct.sco_conn*, %struct.sco_conn** %4, align 8
  %9 = call i32 @sco_conn_lock(%struct.sco_conn* %8)
  %10 = load %struct.sco_conn*, %struct.sco_conn** %4, align 8
  %11 = getelementptr inbounds %struct.sco_conn, %struct.sco_conn* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %17

14:                                               ; preds = %3
  %15 = load i32, i32* @EBUSY, align 4
  %16 = sub nsw i32 0, %15
  store i32 %16, i32* %7, align 4
  br label %22

17:                                               ; preds = %3
  %18 = load %struct.sco_conn*, %struct.sco_conn** %4, align 8
  %19 = load %struct.sock*, %struct.sock** %5, align 8
  %20 = load %struct.sock*, %struct.sock** %6, align 8
  %21 = call i32 @__sco_chan_add(%struct.sco_conn* %18, %struct.sock* %19, %struct.sock* %20)
  br label %22

22:                                               ; preds = %17, %14
  %23 = load %struct.sco_conn*, %struct.sco_conn** %4, align 8
  %24 = call i32 @sco_conn_unlock(%struct.sco_conn* %23)
  %25 = load i32, i32* %7, align 4
  ret i32 %25
}

declare dso_local i32 @sco_conn_lock(%struct.sco_conn*) #1

declare dso_local i32 @__sco_chan_add(%struct.sco_conn*, %struct.sock*, %struct.sock*) #1

declare dso_local i32 @sco_conn_unlock(%struct.sco_conn*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
